fix logo image on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,7 @@ nav a:hover{
   }
   #navbarLogoImg {
     width: 100%;
+    height: auto;
   }
   .projectCard {
     flex-direction: column;
